# vite-react-ts-fastapi-postgresql-docker

./: README.md  compose.yml
.github/workflows/: backend_lint_test.yml  frontend_lint_test.yml
backend/: .env.sample  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: base.py  user.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 5b9171cf6998_create_user_table.py
frontend/: .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/.husky/: pre-push
frontend/src/: App.tsx
frontend/src/components/TextInput/: TextInput.stories.tsx  TextInput.test.tsx  TextInput.tsx
